turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:31: error: expected class or object definition
def setCouleurSol(c:Color) {
^Turmite:38: error: expected start of definition
	override def run() { 
                 ^Turmite:53: error: Unmatched closing brace '}' ignored here
}
^